logs/resmonitor.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Retro-0.9.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/resmoni'...
Compiling './lib/python3.5/site-packages/resmoni/CpuMonitor.py'...
***   File "./lib/python3.5/site-packages/resmoni/CpuMonitor.py", line 34
    print "%s \t cpu = %.4f%%" %(time2str(), getCpuPerc())
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resmoni/MemoryMonitor.py'...
***   File "./lib/python3.5/site-packages/resmoni/MemoryMonitor.py", line 39
    print "%s memory = %.2f %%" %(time2str(), memory.usagePerc())
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resmoni/UsageDB.py'...
***   File "./lib/python3.5/site-packages/resmoni/UsageDB.py", line 114
    print "start < now =", start < now
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/resmoni/UsageWebService.py'...
***   File "./lib/python3.5/site-packages/resmoni/UsageWebService.py", line 35
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/resmoni/usage.py'...
***   File "./lib/python3.5/site-packages/resmoni/usage.py", line 46
    print "%s \t cpu = %.4f %% memory = %.2f Megs" %(getTimeStr(), cpuPct, mem)
                                                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/resmonitor-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/retro'...
Compiling './lib/python3.5/site-packages/retro/__init__.py'...
***   File "./lib/python3.5/site-packages/retro/__init__.py", line 206
    print "%s: %s" % (key, value)
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/retro/web.py'...
***   File "./lib/python3.5/site-packages/retro/web.py", line 758
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/retro/wsgi.py'...
***   File "./lib/python3.5/site-packages/retro/wsgi.py", line 218
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
